# galactic_ws

bag/23_5_joint_limits_test/rosbag2_2023_05_23-18_21_08/: metadata.yaml
bag/23_halfbackflip/rosbag2_2023_05_23-16_53_01/: metadata.yaml
bag/23_jump/rosbag2_2023_05_23-15_43_24/: metadata.yaml
bag/23_jump_2/rosbag2_2023_05_23-15_51_02/: metadata.yaml
bag/25_5_jump/rosbag2_2023_05_25-20_39_35/: metadata.yaml
bag/31_5_staticss_joints/rosbag2_2023_05_31-19_33_57/: metadata.yaml
install/: local_setup.sh  setup.sh
install/hidro_robots/share/hidro_robots/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hidro_ros2_utils/include/hidro_ros2_utils/: state_machine_interface.hpp
install/hidro_ros2_utils/share/hidro_ros2_utils/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/odri_ros2_examples/lib/odri_ros2_examples/: example_robot
install/odri_ros2_examples/share/odri_ros2_examples/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/odri_ros2_gazebo/include/odri_ros2_gazebo/: odri_gazebo_plugin.hpp
install/odri_ros2_gazebo/share/odri_ros2_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/odri_ros2_gazebo/share/odri_ros2_gazebo/cmake/: odri_ros2_gazeboTargetsExport.cmake
install/odri_ros2_hardware/lib/odri_ros2_hardware/: robot_interface
install/odri_ros2_hardware/share/odri_ros2_hardware/: local_setup.dsv  local_setup.sh  (+6 more)
log/: latest_build
src/solo12_bringup/: CMakeLists.txt
(+150 files in other folders)
