<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>odri_ros2_gazebo</name>
  <version>0.0.0</version>
  <description>This package contains the plguins to simulate an ODRI joint in Gazebo Classic</description>
  <maintainer email="jmarti@iri.upc.edu">eagle</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  
  <depend>odri_ros2_interfaces</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}" />
  </export>
</package>